# hfortix-fortios

./: .editorconfig  .env.example  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .readthedocs.yaml  API_COVERAGE.md  ASYNC_GUIDE.md  AUDIT_LOGGING_IMPLEMENTATION.md  CHANGELOG.md  DEVELOPMENT.md  DOCSTRING_ENHANCEMENTS_COMPLETE.md  FEATURE_IMPLEMENTATION_STATUS.md  FILTERING_GUIDE.md  GENERATOR_FIX_SUMMARY.md  GIT_WORKFLOW.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_SESSION_2026-01-03.md  IMPROVEMENTS_SUMMARY.md  LICENSE  LITERAL_TYPES_ENHANCEMENT.md  Makefile  OBJECT_MODE_IMPLEMENTATION.md  QUICKSTART.md  README.md  REALITY_CHECK_ANALYSIS.md  REFACTORING_PROGRESS.md  REFACTORING_RECOMMENDATIONS.md  REQUEST_METHOD_GUIDE.md  ROADMAP.md  TESTING.md  TODO.md  TYPE_STUB_BENEFITS_EXAMPLES.md  TYPE_STUB_IMPLEMENTATION_SUMMARY.md  TYPE_STUB_INTEGRATION_GUIDE.md  __init__.py  fortinet_exceptions.py  generate_docs.py  pyproject.toml  (+19 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  label-pr.yml  publish.yml
FortiOS/: __init__.py  client.py  exceptions.py  fortios.py  http_client.py  version.py
FortiOS/api/: __init__.py
cmdb/firewall/: auto_test_policy.py
docs/: EXAMPLES.md  FIX_WINDOWS_INSTALL.md  Makefile  PYPI_SETUP.md  README.md  ROADMAP.md  SCHEDULE_CONVENIENCE_METHODS.md
docs/fortios/: API_COVERAGE.md  ASYNC_GUIDE.md  ASYNC_STATUS.md  AUDIT_LOGGING.md  ERROR_HANDLING_CONFIG.md  HANDLER_PROTOCOL_SYSTEM.md  HELPER_MIGRATION_GUIDE.md  IDE_QUICKSTART.md  RATE_LIMITING.md  README.md  READONLY_ENDPOINT_FIX.md  SCHEMA_DISCOVERY.md  SCHEMA_IMPROVEMENT_SUGGESTIONS.md  TESTING.md  VALIDATION_GUIDE.md
docs/fortios/wrappers/: CONVENIENCE_WRAPPERS.md  SCHEDULE_WRAPPERS.md  SSH_SSL_PROXY_WRAPPERS.md
docs/source/: conf.py  index.rst
docs/source/api-reference/: index.rst
docs/source/endpoints/: index.rst
docs/source/examples/: advanced-patterns.md  basic-usage.md  error-handling.md  index.md  validation.md  (+1 more)
docs/wrappers/: CONVENIENCE_WRAPPERS.md  FIREWALL_POLICY_WRAPPER.md  SHAPER_WRAPPERS.md
hfortix/: __init__.py
hfortix/FortiOS/: __init__.py  exceptions_forti.py  fortios.py  http_client.py  http_client_async.py  http_client_base.py  http_client_interface.py  performance_test.py
hfortix_fortios/: client.py  models.pyi
scripts/: analyze_normalizable_fields.py  generate_readonly_list.py  install_git_hooks.sh  run_quality_checks.sh  sync_to_public.sh
src/: .readthedocs.yaml
src/docs/: requirements.txt
src/hfortix_fortios/: __init__.py  transaction.py
(+6648 files in other folders)
